--- a/KbRetrofit/app/src/main/res/layout/activity_main.xml
+++ b/KbRetrofit/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     tools:context="com.example.kbpark.kbretrofit.MainActivity">
 
     <TextView
-        android:text="Json from server"
+        android:text="get method"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:id="@+id/textView4"
@@ -20,7 +20,7 @@
         android:layout_alignParentEnd="true" />
 
     <TextView
-        android:text="Json to Server"
+        android:text="post method"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:id="@+id/textView3"
@@ -30,39 +30,39 @@
 
     <TextView
         android:text="-"
-        android:id="@+id/fromServer"
+        android:id="@+id/get_text"
         android:layout_width="160dp"
         android:layout_below="@+id/textView4"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_height="330dp" />
 
-    <TextView
-        android:text="-"
-        android:id="@+id/toServer"
-        android:layout_width="160dp"
-        android:layout_below="@+id/textView3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_height="330dp" />
-
     <Button
-        android:text="send"
+        android:text="POST"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/send"
-        android:onClick="onSendClicked"
-        android:layout_below="@+id/toServer"
+        android:onClick="onPostClicked"
+        android:layout_below="@+id/post_text"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <Button
-        android:text="receive"
+        android:text="Get"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/receive"
-        android:onClick="onReceiveClicked"
-        android:layout_below="@+id/fromServer"
+        android:onClick="onGetClicked"
+        android:layout_below="@+id/get_text"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:text="-"
+        android:id="@+id/post_text"
+        android:layout_width="160dp"
+        android:layout_height="330dp"
+        android:layout_below="@+id/textView3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
