--- a/KbBeacon/app/src/main/res/layout/activity_main.xml
+++ b/KbBeacon/app/src/main/res/layout/activity_main.xml
@@ -10,20 +10,16 @@
     <RelativeLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        >
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:id="@+id/textView" />
 
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/textView"
-            android:layout_centerHorizontal="true" />
     </RelativeLayout>
 
 </RelativeLayout>
